--- a/app/config.ini
+++ b/app/config.ini
@@ -17,7 +17,7 @@ site="CMS Demo"
 ; SQLite DSN
 db="mysql:host=localhost;port=3306;dbname=wordpress"
 db_user="wordpress"
-db_pass="q1w2e3"
+db_pass="admpass"
 ; User ID and password for accessing the back-end
 user_id=admin
 ; Password: crypt('secret')
