--- a/app/routes.ini
+++ b/app/routes.ini
@@ -2,6 +2,10 @@
 
 GET /=CMS->show
 GET /@slug=CMS->show
+;;GET /@slug/@postname=CMS-show
+GET /post/@post=CMS->post
+
+
 POST /@slug=CMS->comment
 
 GET /login=CMS->login
