--- a/app/routes.ini
+++ b/app/routes.ini
@@ -1,21 +1,20 @@
 [routes]
 
-GET /=CMS->show
-GET /@slug=CMS->show
-;;GET /@slug/@postname=CMS-show
-GET /post/@post=CMS->post
+GET / = BaseController->view
+GET /post/@name = PostController->view
 
+#GET /@slug/@postname=CMS-show
 
-POST /@slug=CMS->comment
+#POST /@slug=CMS->comment
 
-GET /login=CMS->login
-GET /logout=CMS->logout
-POST /login=CMS->auth
+#GET /login=CMS->login
+#GET /logout=CMS->logout
+#POST /login=CMS->auth
 
-GET /admin/pages=Admin->pages
-GET /admin/pages/move=Admin->move
-GET /admin/pages/edit=Admin->edit
-POST /admin/pages/exec=Admin->exec
+#GET /admin/pages=Admin->pages
+#GET /admin/pages/move=Admin->move
+#GET /admin/pages/edit=Admin->edit
+#POST /admin/pages/exec=Admin->exec
 
-GET /admin/assets=Admin->assets
-POST /admin/assets=Admin->upload
+#GET /admin/assets=Admin->assets
+#POST /admin/assets=Admin->upload
